# libsimple

./: .gitignore  Makefile.am  README.md  common.am  configure.ac  export.def  libsimple.sln  libsimple.vcxproj
httpsrv/: Makefile.am  client.c  client.h  httprequest.c  httprequest.h  server.c
httpsrv/httpsrv/: httpsrv.vcxproj
include/: list.h  semaphore.h  thread.h
include/simple/: async_io.h  circ_buf.h  fd.h  httpparser.h  httpserver.h  list.h  stream.h  tcpclient.h  tcpserver.h  thread.h  threadpool.h  url.h
src/: Makefile.am  circ_buf.c  fd.c  fd_impl.h  httpc.c  httpc_impl.h  httpparser.c  httpserver.c  mutex.c  regex.c  regex.h  semaphore.c  stream.c  stream_impl.h  tcpclient.c  tcpserver.c  thread.c  threadpool.c  urlparser.c
test/: Makefile.am  test_httpparser.c  test_tcpclient.c  test_tcpserver.c  test_threadpool.c
test/test_httpparser/: test_httpparser.vcxproj
test/test_tcpclient/: test_tcpclient.vcxproj
test/test_tcpserver/: test_tcpserver.vcxproj
test/test_threadpool/: test_threadpool.vcxproj
tmp/: Ptz.cpp  Ptz.h  Running.cpp  Running.h  StateDuration.h  StudentDetecting.cpp  StudentDetecting.h  StudentPtz.cpp  StudentPtz.h  StudentRunning.cpp  StudentRunning.h  StudentRunningImpl.cpp  StudentRunningImpl.h  TeacherAnalyze.cpp  TeacherAnalyze.h  TeacherDetecting.cpp  TeacherDetecting.h  TeacherPtz.cpp  TeacherPtz.h  TeacherRunning.cpp  TeacherRunning.h  TeacherRunningImpl.cpp  TeacherRunningImpl.h  TracePolicy.cpp  TracePolicy.h  define.h  log.h  ptz_oper.cpp  ptz_oper.h  tdt.cpp  tdt.h  version.h
